<resources>
    <string name="app_name">我的第一个APP</string>
    <string name="TextView_price">书本价格:</string>
    <string name="TextView_title">书本标题:</string>
    <string name="buttonText_add">添加</string>
    <string name="buttonText_edit">修改</string>
    <string name="tab1">图书</string>
    <string name="tab2">新闻</string>
    <string name="tab3">地图</string>
    <string name="init_bookCount">书本数量: 0</string>
    <string name="resetButton">Reset</string>
</resources>